# BreezeEnhanced-KDE6

./: CMakeLists.txt  breezeenhanced.json
config/: CMakeLists.txt  kcm_breezeenhanceddecoration.cpp
